change the category description css so subcategories render more nicely

--- a/common/common.scss
+++ b/common/common.scss
@@ -414,3 +414,7 @@ header.d-header {
 .cookie-banner__btn--ok:hover {
   cursor: pointer;
 }
+
+.categories-list .category .category-description {
+  overflow: auto;
+}
