--- a/common/common.scss
+++ b/common/common.scss
@@ -1,36 +1,218 @@
-.container {
-    max-width: 1100px;
-    margin-right: auto;
-    margin-left: auto;
-    padding: 0 8px;
-}
-
+/* Base styles */
 html, body {
   font-family: "Lato", helvetica, sans-serif;
 }
 
-nav.navbar {
+/* Minimal Bootstrap styles needed for navbar */
+.container-fluid {
+  width: 100%;
+  padding-right: var(--bs-gutter-x, 0.75rem);
+  padding-left: var(--bs-gutter-x, 0.75rem);
+  margin-right: auto;
+  margin-left: auto;
+}
+
+.container {
+  max-width: 1100px;
+  margin-right: auto;
+  margin-left: auto;
+  padding: 0 8px;
+}
+
+/* Flex utilities */
+.d-flex {
+  display: flex !important;
+}
+
+.p-4 {
+  padding: 1.5rem !important;
+}
+
+.me-auto {
+  margin-right: auto !important;
+}
+
+.mb-2 {
+  margin-bottom: 0.5rem !important;
+}
+
+.mb-lg-0 {
+  @media (min-width: 992px) {
+    margin-bottom: 0 !important;
+  }
+}
+
+.px-4 {
+  padding-right: 1.5rem !important;
+  padding-left: 1.5rem !important;
+}
+
+/* Navbar specific styles */
+.navbar {
+  position: relative;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: space-between;
   background-color: #034278;
   color: white;
   padding: 1rem 0;
 }
 
+.navbar > .container,
+.navbar > .container-fluid {
+  display: flex;
+  flex-wrap: inherit;
+  align-items: center;
+  justify-content: space-between;
+}
+
 .navbar-brand {
+  padding-top: 0.3125rem;
+  padding-bottom: 0.3125rem;
+  margin-right: 1rem;
+  font-size: 1.25rem;
+  text-decoration: none;
+  white-space: nowrap;
+  
   img {
     height: 1em;
   }
 }
 
-ul.navbar-nav {
-  li.nav-item  {
-    > a {
+.navbar-nav {
+  display: flex;
+  flex-direction: column;
+  padding-left: 0;
+  margin-bottom: 0;
+  list-style: none;
+  
+  .nav-item {
+    margin: 0 0.5rem;
+  }
+  
+  .nav-link {
+    display: block;
+    padding: 0.5rem 1rem;
+    color: white;
+    text-decoration: none;
+    transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out;
+    
+    &:hover, &:focus {
       color: white;
+      opacity: 0.8;
+      transform: translate(0, 1px);
+    }
+  }
+}
 
-      &:not(.btn):hover {
-        color: white;
-        opacity: 0.8;
-        transform: translate(0, 1px);
+.navbar-collapse {
+  flex-basis: 100%;
+  flex-grow: 1;
+  align-items: center;
+}
+
+.navbar-toggler {
+  padding: 0.25rem 0.75rem;
+  font-size: 1.25rem;
+  line-height: 1;
+  background-color: transparent;
+  border: 1px solid rgba(255, 255, 255, 0.1);
+  border-radius: 0.25rem;
+  transition: box-shadow 0.15s ease-in-out;
+  cursor: pointer;
+  color: white;
+  
+  &:focus {
+    outline: 0;
+    box-shadow: 0 0 0 0.25rem rgba(255, 255, 255, 0.25);
+  }
+}
+
+.navbar-toggler-icon {
+  display: inline-block;
+  width: 1.5em;
+  height: 1.5em;
+  vertical-align: middle;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 100%;
+  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='rgba%28255, 255, 255, 0.55%29' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
+}
+
+/* Button styles */
+.btn {
+  display: inline-block;
+  font-weight: 400;
+  line-height: 1.5;
+  color: #212529;
+  text-align: center;
+  text-decoration: none;
+  vertical-align: middle;
+  cursor: pointer;
+  user-select: none;
+  background-color: transparent;
+  border: 1px solid transparent;
+  padding: 0.375rem 0.75rem;
+  font-size: 1rem;
+  border-radius: 0.25rem;
+  transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+}
+
+.btn-outline-light {
+  color: black;
+  border-color: #ffffff;
+  background-color: #f8f9fa;
+  
+  &:hover {
+    color: #000;
+    background-color: #919191;
+    border-color: #ffffff;
+  }
+}
+
+.rounded-pill {
+  border-radius: 50rem !important;
+}
+
+/* Media queries for responsive navbar */
+@media (max-width: 991.98px) {
+  .navbar-collapse {
+    display: none;
+  }
+  
+  .navbar-collapse.show {
+    display: block;
+  }
+  
+  .navbar-nav {
+    .nav-item {
+      margin: 0.25rem 0;
+    }
+  }
+}
+
+@media (min-width: 992px) {
+  .navbar-expand-lg {
+    flex-wrap: nowrap;
+    justify-content: flex-start;
+    
+    .navbar-nav {
+      flex-direction: row;
+      
+      .nav-link {
+        padding-right: 0.5rem;
+        padding-left: 0.5rem;
       }
+    }
+    
+    .navbar-collapse {
+      display: flex !important;
+      flex-basis: auto;
+    }
+    
+    .navbar-toggler {
+      display: none;
     }
   }
 }
